--- a/working/static/templates/template.html
+++ b/working/static/templates/template.html
@@ -1,6 +1,16 @@
 <html>
 <head>
     <script src='file/js/render.js'></script>
+    <style>
+        @font-face {
+            font-family: DejaVuSansMono;
+            src: url("../file/fonts/DejaVuSansMono.ttf")
+        }
+        body {
+            font-family: DejaVuSansMono;
+            background-color: lightyellow;
+        }
+    </style>
 </head>
 <body>
     <render id='render' data='{{ .data }}' />
