add dejavu bold

--- a/working/static/templates/template.html
+++ b/working/static/templates/template.html
@@ -6,6 +6,10 @@
             font-family: DejaVuSansMono;
             src: url("../file/fonts/DejaVuSansMono.ttf")
         }
+        @font-face {
+            font-family: DejaVuSansMonoBold;
+            src: url("../file/fonts/DejaVuSansMono-Bold.ttf")
+        }
         body {
             font-family: DejaVuSansMono;
             background-color: lightyellow;
