--- a/working/static/templates/template.html
+++ b/working/static/templates/template.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <render id='render' data='{{ .data }}'></render>
-    <div style='position: fixed; z-index: 1000; display: flex; background-color: lightpink; left: 0; right: 0; top: 0; min-height: 48px;'>
+    <div class='nav-bar' id='nav'>
     </div>
-    <div class='place-board'>
+    <div class='place-board' id='board'>
     </div>
 </body>
 </html>
